fix: aligns colours nav with dropdown menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,13 @@ h1 {
 }
 
 .nav-link {
-    margin-top:40px;
+    margin-top:50px;
+    margin-bottom:0;
+}
+
+.dropdown-menu {
+    padding:0;
+    margin:0;
 }
 
 
